--- a/scss/index.scss
+++ b/scss/index.scss
@@ -143,21 +143,47 @@ h1, h2 {
 	-webkit-appearance: none;
   margin: 18px 0;
   width: calc(100% - 40px);
-	background: $dark-2;
+	&:disabled {
+		&::-webkit-slider-thumb {
+			-webkit-appearance: none;
+			height: 16px;
+			width: 16px;
+			border-radius: 50%;
+			background: $dark-4;
+			cursor: pointer;
+			margin-top: -5px; 
+		}
+		&::-ms-track {
+			width: 100%;
+			height: 8.4px;
+			cursor: pointer;
+			background: transparent; 
+			border-color: transparent;
+			border-width: 16px 0;
+			color: transparent;
+		}
+		&::-webkit-slider-runnable-track {
+			width: 100%;
+			height: 6px;
+			cursor: pointer;
+			background: $dark-5;
+			border-radius: 1.3px;
+		}
+		&::-ms-fill-lower {
+			background: $dark-5;
+			border-radius: 2.6px;
+		}
+
+	}
+
 	&::-webkit-slider-thumb {
 		-webkit-appearance: none;
 		height: 16px;
 		width: 16px;
 		border-radius: 50%;
-		background: $dark-4;
+		background: $green-1;
 		cursor: pointer;
 		margin-top: -5px; 
-	}
-	&:focus {
-		outline: none;
-		&::-webkit-slider-runnable-track {
-			background: $dark-5;
-		}
 	}
 	&::-ms-track {
 		width: 100%;
@@ -172,13 +198,25 @@ h1, h2 {
 		width: 100%;
 		height: 6px;
 		cursor: pointer;
-		background: $dark-5;
+		background: $green-1;
 		border-radius: 1.3px;
 	}
-  &::-ms-fill-lower {
-		background: $dark-5;
+	&::-ms-fill-lower {
+		background: $green-1;
 		border-radius: 2.6px;
 	}
+	
+	&:focus {
+		outline: none;
+		&::-webkit-slider-runnable-track {
+			background: $dark-5;
+		}
+	}
+	
+}
+
+.slider-active {
+
 }
 
 .currency-to-container {
@@ -267,6 +305,38 @@ h1, h2 {
 	}
 }
 
-.dd-selected {
-	padding: 3px !important;
+
+
+.dd-select {
+	border: none !important;
+}
+
+.currency-from-container {
+	.dd-selected {
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+		padding: 5px 0 0 5px;
+	}
+	.dd-select {
+		background-color: transparent !important;
+	}
+	.dd-container {	
+		pointer-events: none;
+	}
+	.dd-pointer {
+		display: none;
+	}
+}
+
+.active-section-select {
+	.dd-select {
+		background-color: $white-2 !important;
+	}
+	.dd-container {	
+		pointer-events: initial;
+	}
+	.dd-pointer {
+		display: block;
+	}
 }
