--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,8 @@ h1, h2 {
 
 .card-field {
   border: none;
+  border-radius: 4px;
+  color: rgba(255, 255, 255, 0.3);
   background-color: #354051;
   width: 100%;
   height: 56px;
@@ -260,6 +262,21 @@ h1, h2 {
           transform: translateY(-50%);
   left: 20px;
 }
+.currency-to-container .dd-selected {
+  border: none;
+  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+  padding-bottom: 5px;
+  background-color: #354051;
+}
 
 .currency-from-container {
   position: relative;
@@ -278,19 +295,18 @@ h1, h2 {
   left: 20px;
 }
 
-.information {
+#information {
   display: none;
   position: absolute;
   bottom: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   border-radius: 10px;
-  padding: 15px 20px 0;
-  height: 224px;
+  padding: 15px 20px 99px;
   width: 100%;
   background-color: #2B3545;
 }
-.information h1 {
+#information h1 {
   color: #FFF;
   font-size: 18px;
   font-weight: 700;
@@ -318,35 +334,48 @@ h1, h2 {
   font-size: 16px;
   font-weight: 400;
   text-transform: uppercase;
+  margin-bottom: 5px;
 }
 
-.close {
+#information-close {
   cursor: pointer;
   position: absolute;
   top: 24px;
   right: 44px;
 }
-.close:before, .close:after {
+#information-close:before, #information-close:after {
   content: "";
   position: absolute;
   width: 24px;
   height: 2px;
   background: #F6F6F6;
 }
-.close::before {
+#information-close::before {
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
 }
-.close::after {
+#information-close::after {
   -webkit-transform: rotate(-45deg);
           transform: rotate(-45deg);
+}
+
+.info-active {
+  display: block;
+}
+.info-active .card-body {
+  opacity: 0.5;
 }
 
 .dd-select {
   border: none !important;
 }
 
+.dd-pointer {
+  display: none;
+}
+
 .currency-from-container .dd-selected {
+  border: none;
   overflow: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -354,16 +383,26 @@ h1, h2 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
   padding: 5px 0 0 5px;
-}
-.currency-from-container .dd-select {
-  background-color: transparent !important;
+  background-color: #354051;
 }
 .currency-from-container .dd-container {
   pointer-events: none;
 }
-.currency-from-container .dd-pointer {
-  display: none;
+.currency-from-container .dd-option {
+  padding: 0 10px 0 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.currency-from-container .dd-option label {
+  line-height: 44px !important;
 }
 
 .active-section-select .dd-select {
