--- a/scss/index.scss
+++ b/scss/index.scss
@@ -45,6 +45,7 @@ h1, h2 {
 			height: 54px;
 			background-color: $dark-3;
 			text-transform: uppercase;
+
 		}
 	}
 }
@@ -82,6 +83,8 @@ h1, h2 {
 
 .card-field {
 	border: none;
+	border-radius: 4px;
+	color: $card-field-color;
 	background-color: $dark-1;
 	width: 100%;
 	height: 56px;
@@ -215,10 +218,6 @@ h1, h2 {
 	
 }
 
-.slider-active {
-
-}
-
 .currency-to-container {
 	position: relative;
 	&::before {
@@ -234,6 +233,15 @@ h1, h2 {
 		top: calc(50% + 5px);
 		transform: translateY(-50%);
 		left: 20px;
+	}
+	.dd-selected {
+		border: none;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+		justify-content: end;
+		padding-bottom: 5px;
+		background-color: $dark-1;
 	}
 }
 .currency-from-container {
@@ -253,14 +261,13 @@ h1, h2 {
 	}
 }
 
-.information {
+#information {
 	display: none;
 	position: absolute;
 	bottom: 0;
 	box-sizing: border-box;
 	border-radius: 10px;
-  padding: 15px 20px 0;
-	height: 224px;
+  padding: 15px 20px 99px;
 	width: 100%;
 	background-color: $dark-2;
 	h1 {
@@ -282,10 +289,11 @@ h1, h2 {
 		font-size: 16px;
 		font-weight: 400;
 		text-transform: uppercase;
+		margin-bottom: 5px;
 	}
 }
 
-.close {
+#information-close {
 	cursor: pointer; 
 	position: absolute; 
 	top: 24px; 
@@ -305,27 +313,42 @@ h1, h2 {
 	}
 }
 
-
+.info-active {
+	display: block;
+	.card-body {	
+		opacity: 0.5;	
+	}	
+}
 
 .dd-select {
 	border: none !important;
 }
+.dd-pointer {
+	display: none;
+}
 
 .currency-from-container {
 	.dd-selected {
+		border: none;
     overflow: hidden;
     display: flex;
     align-items: center;
+		justify-content: end;
 		padding: 5px 0 0 5px;
+		background-color: $dark-1;
 	}
-	.dd-select {
-		background-color: transparent !important;
-	}
+	
 	.dd-container {	
 		pointer-events: none;
 	}
-	.dd-pointer {
-		display: none;
+	
+	.dd-option {
+		padding: 0 10px 0 10px;
+		display: flex;
+		align-items: center;
+		label {
+			line-height: 44px !important;
+		}
 	}
 }
 
@@ -340,3 +363,5 @@ h1, h2 {
 		display: block;
 	}
 }
+
+
